--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,4 @@
+
 h1{
     float:right;
     font-family:Impact, 'Haettenschweiler', 'Arial Narrow Bold', sans-serif;
@@ -7,9 +8,10 @@ h1{
 }
 
 #animal-form{
-    position:fixed;
-    left:800px;
-    top:140px;
+    float:right;
+    position:relative;
+    left:100px;
+    top:110px;
 }
 
 button{
