--- a/assets/style.css
+++ b/assets/style.css
@@ -1,17 +1,17 @@
 
 h1{
-    float:right;
-    font-family:Impact, 'Haettenschweiler', 'Arial Narrow Bold', sans-serif;
     position:relative;
-    right:120px;
-    font-size:70px;
+    left:180px;
+    font-family:Impact, 'Haettenschweiler', 'Arial Narrow Bold', sans-serif;
+    font-size:65px;
 }
 
 #animal-form{
-    float:right;
-    position:relative;
-    left:100px;
-    top:110px;
+    float:left;
+    position:absolute;
+    top:130px;
+    left:190px;
+
 }
 
 button{
@@ -22,6 +22,7 @@ button{
     border-radius:50%;
     cursor:pointer;
     outline:none;
+    float:right;
     
 }
 
@@ -42,6 +43,8 @@ button:active{
 #button-view{
     padding:15px;
     width:700px;
+    position:relative;
+    top:100px;
 }
 
 #animal-input{
@@ -60,8 +63,8 @@ body{
 }
 
 #gifs{
-    margin-left:200px;
-   
+    /* margin-left:200px; */
+    float:right;
 }
 
 img{
